@@ -1,7 +1,7 @@
 CHANGELOG
 --------------------------
 
-Development and Support Notice >> 2011-11-01
+Development and Support Notice >> Last update: 2011-11-01
 ___________________________________________________________
 
 Future updates and extensions will be available in the module db.
@@ -9,6 +9,12 @@ This will only happen if it is necessary or created by the community.
 We don't plan to release new versions except for heavy issues.
 Upcoming PHP and MySQL branches don't seem to cause problems.
 Support for ClanSphere will still remain in our forums and contact forms.
+
+
+ClanSphere 2011.2.2 >> 201X-XX-XX
+___________________________________________________________
+
+-- Fixed a few bugs that were reported at "Trac" --
 
 
 ClanSphere 2011.2.1 >> 2011-11-01
